--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+.rowdies-regular {
+    font-family: "Rowdies", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .rowdies-bold {
+    font-family: "Rowdies", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  
 * {
     box-sizing: border-box;
   }
@@ -143,6 +156,7 @@
     line-height: 1.5rem;
     margin-top: 1.5rem;
     margin-bottom: 0;
+    font-size: 22px;
   }
   ul li,
   ol li {
