--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@
   overflow: hidden;
   position: relative;
   width: 100%;
-  background-image:url(img/city2.jpg);
+  background-image:url(img/1st\ section.jpg);
   background-attachment: fixed;
   background-size: cover;
   -moz-background-size: cover;
@@ -141,7 +141,7 @@
   overflow: hidden;
   position: relative;
   width: 100%;
-  background-image: url(img/skyscraper.jpg);
+  background-image: url(img/ceo\ conference\ room.webp);
   background-attachment: fixed;
   background-size: cover;
   -moz-background-size: cover;
@@ -155,7 +155,7 @@
   overflow: hidden;
   position: relative;
   width: 100%;
-  background-image: url(img/wowaaaa.jpg);
+  background-image: url(img/woman\ ceo.jpg);
   background-attachment: fixed;
   background-size: cover;
   -moz-background-size: cover;
@@ -284,3 +284,55 @@ img {
   width: 400px;
   height: 400px;
 }
+
+/* IMAGES start */
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+  }
+  
+  /* Clearfix (clear floats) */
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  
+  .image-container {
+    position: relative;
+    height: 200px; /* Set the fixed height for all images */
+    overflow: hidden; /* Hide overflow if image is larger than container */
+  }
+  
+  .image-container img {
+    width: 100%;
+    height: auto;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Dark overlay color */
+    opacity: 0; /* Initially hidden */
+    transition: opacity 0.5s ease;
+  }
+  
+  .image-container:hover .overlay {
+    opacity: 1; /* Show overlay on hover */
+  }
+  
+  .text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 80%;
+  }
+/* Images end */  
